--- a/stm32F103rct6/stm32f103rct6_demo/stm32f103rct6.ioc
+++ b/stm32F103rct6/stm32f103rct6_demo/stm32f103rct6.ioc
@@ -1,216 +1,318 @@
 #MicroXplorer Configuration settings - do not modify
-FATFS.IPParameters=_USE_LABEL,_CODE_PAGE,_VOLUMES,_FS_LOCK
-FATFS._CODE_PAGE=1
-FATFS._FS_LOCK=0
-FATFS._USE_LABEL=1
-FATFS._VOLUMES=2
-File.Version=6
-KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=FATFS
-Mcu.IP1=NVIC
-Mcu.IP10=USB_DEVICE
-Mcu.IP2=RCC
-Mcu.IP3=RTC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
-Mcu.IP7=TIM3
-Mcu.IP8=USART1
-Mcu.IP9=USB
-Mcu.IPNb=11
-Mcu.Name=STM32F103R(C-D-E)Tx
-Mcu.Package=LQFP64
+NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+Dma.USART3_TX.5.MemInc=DMA_MINC_ENABLE
+ProjectManager.MainLocation=Src
+Dma.USART2_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+RCC.MCOFreq_Value=48000000
+NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+PA6.Mode=Full_Duplex_Master
+USB_DEVICE.CLASS_NAME_FS=MSC
+USART2.IPParameters=VirtualMode
+NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+Dma.USART3_RX.4.Priority=DMA_PRIORITY_LOW
+ProjectManager.KeepUserCode=true
+Mcu.UserName=STM32F103RCTx
+SPI1.VirtualType=VM_MASTER
+Dma.USART1_TX.1.MemInc=DMA_MINC_ENABLE
+PB10.Mode=Asynchronous
+Dma.USART2_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+RCC.PLLCLKFreq_Value=48000000
+PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd,GPIO_Label
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_CAN_Init-CAN-false-HAL-true,12-MX_TIM4_Init-TIM4-false-HAL-true,13-MX_USART2_UART_Init-USART2-false-HAL-true,14-MX_USART3_UART_Init-USART3-false-HAL-true
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+RTC.WeekDay=RTC_WEEKDAY_THURSDAY
+PA11.Mode=Device
+PD2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+RCC.ADCFreqValue=24000000
+PD2.Locked=true
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
+PD2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+Dma.USART2_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+USART1.IPParameters=VirtualMode
+PC1.Locked=true
+PB11.Signal=USART3_RX
+PinOutPanel.RotationAngle=0
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+ProjectManager.StackSize=0x1000
+PD1-OSC_OUT.Signal=RCC_OSC_OUT
+NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+Mcu.IP4=RCC
+RCC.FCLKCortexFreq_Value=48000000
+Mcu.IP5=RTC
+Mcu.IP2=FATFS
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.IP3=NVIC
+RCC.SDIOHCLKDiv2FreqValue=24000000
+Mcu.IP0=CAN
+Mcu.IP1=DMA
+PA12.Signal=USB_DP
+NVIC.USB_HP_CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
+Mcu.UserConstants=
+PC1.GPIOParameters=GPIO_PuPd,GPIO_Label
+Mcu.ThirdPartyNb=0
+RCC.SDIOFreq_Value=48000000
+SPI1.Direction=SPI_DIRECTION_2LINES
+Dma.USART3_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+RCC.HCLKFreq_Value=48000000
+Mcu.IPNb=16
+TIM2.IPParameters=Prescaler,Period
+ProjectManager.PreviousToolchain=
+RCC.APB2TimFreq_Value=48000000
+TIM3.Period=50-1
+Dma.USART2_RX.2.Priority=DMA_PRIORITY_MEDIUM
+RTC.IPParameters=Month,Date,WeekDay
+SPI1.CalculateBaudRate=187.5 KBits/s
+PA8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+Mcu.Pin6=PA2
+Dma.USART2_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+Mcu.Pin7=PA3
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+NVIC.CAN1_SCE_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+RCC.AHBFreq_Value=48000000
+Dma.USART1_RX.0.Priority=DMA_PRIORITY_MEDIUM
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PD2
-Mcu.Pin17=VP_FATFS_VS_Generic
-Mcu.Pin18=VP_RTC_VS_RTC_Activate
-Mcu.Pin19=VP_RTC_VS_RTC_Calendar
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS
 Mcu.Pin3=PD0-OSC_IN
+Dma.USART3_TX.5.Direction=DMA_MEMORY_TO_PERIPH
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PC1
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PA8
-Mcu.PinsNb=24
-Mcu.ThirdPartyNb=0
-Mcu.UserConstants=
-Mcu.UserName=STM32F103RCTx
-MxCube.Version=5.4.0
-MxDb.Version=DB.5.0.40
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
-PA11.Mode=Device
-PA11.Signal=USB_DM
-PA12.Mode=Device
-PA12.Signal=USB_DP
-PA13.Mode=Serial_Wire
-PA13.Signal=SYS_JTMS-SWDIO
-PA14.Mode=Serial_Wire
-PA14.Signal=SYS_JTCK-SWCLK
-PA5.Mode=Full_Duplex_Master
-PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PA8.GPIO_Label=LED0
-PA8.GPIO_PuPd=GPIO_PULLUP
-PA8.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
-PA8.Locked=true
-PA8.Signal=GPIO_Output
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
-PC1.GPIOParameters=GPIO_PuPd,GPIO_Label
-PC1.GPIO_Label=KEY1
-PC1.GPIO_PuPd=GPIO_PULLUP
-PC1.Locked=true
-PC1.Signal=GPIO_Input
-PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd,GPIO_Label
-PC13-TAMPER-RTC.GPIO_Label=KEY0
-PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLUP
-PC13-TAMPER-RTC.Locked=true
-PC13-TAMPER-RTC.Signal=GPIO_Input
-PC14-OSC32_IN.Mode=LSE-External-Oscillator
-PC14-OSC32_IN.Signal=RCC_OSC32_IN
-PC15-OSC32_OUT.Mode=LSE-External-Oscillator
-PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PCC.Checker=false
-PCC.Line=STM32F103
-PCC.MCU=STM32F103R(C-D-E)Tx
-PCC.PartNumber=STM32F103RCTx
-PCC.Seq0=0
-PCC.Series=STM32F1
-PCC.Temperature=25
-PCC.Vdd=3.3
-PD0-OSC_IN.Mode=HSE-External-Oscillator
-PD0-OSC_IN.Signal=RCC_OSC_IN
-PD1-OSC_OUT.Mode=HSE-External-Oscillator
-PD1-OSC_OUT.Signal=RCC_OSC_OUT
-PD2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PD2.GPIO_Label=LED1
-PD2.GPIO_PuPd=GPIO_PULLUP
-PD2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
-PD2.Locked=true
-PD2.Signal=GPIO_Output
-PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
-ProjectManager.BackupPrevious=false
-ProjectManager.CompilerOptimize=6
-ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=true
-ProjectManager.CustomerFirmwarePackage=
-ProjectManager.DefaultFWLocation=true
-ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32F103RCTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.0
-ProjectManager.FreePins=false
-ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x1000
-ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=1
-ProjectManager.MainLocation=Src
-ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=stm32f103rct6.ioc
-ProjectManager.ProjectName=stm32f103rct6
-ProjectManager.StackSize=0x1000
-ProjectManager.TargetToolchain=MDK-ARM V5
-ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_FATFS_Init-FATFS-false-HAL-false,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
-RCC.ADCFreqValue=24000000
-RCC.AHBFreq_Value=48000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=24000000
-RCC.APB1TimFreq_Value=48000000
-RCC.APB2Freq_Value=48000000
-RCC.APB2TimFreq_Value=48000000
-RCC.FCLKCortexFreq_Value=48000000
-RCC.FamilyName=M
-RCC.HCLKFreq_Value=48000000
-RCC.I2S2Freq_Value=48000000
-RCC.I2S3Freq_Value=48000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SDIOFreq_Value,SDIOHCLKDiv2FreqValue,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
-RCC.MCOFreq_Value=48000000
-RCC.PLLCLKFreq_Value=48000000
-RCC.PLLMCOFreq_Value=24000000
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA8.Locked=true
+Mcu.IP10=TIM4
+PC1.GPIO_PuPd=GPIO_PULLUP
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+Mcu.IP12=USART2
 RCC.PLLMUL=RCC_PLL_MUL6
-RCC.SDIOFreq_Value=48000000
-RCC.SDIOHCLKDiv2FreqValue=24000000
-RCC.SYSCLKFreq_VALUE=48000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TimSysFreq_Value=48000000
-RCC.USBFreq_Value=48000000
-RCC.VCOOutput2Freq_Value=8000000
-RTC.Date=27
-RTC.IPParameters=Month,Date,WeekDay
+Mcu.IP11=USART1
+Dma.USART3_RX.4.PeriphInc=DMA_PINC_DISABLE
+ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.0
+MxDb.Version=DB.5.0.60
 RTC.Month=RTC_MONTH_AUGUST
-RTC.WeekDay=RTC_WEEKDAY_THURSDAY
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
-SPI1.CLKPhase=SPI_PHASE_2EDGE
-SPI1.CLKPolarity=SPI_POLARITY_HIGH
-SPI1.CalculateBaudRate=187.5 KBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,CLKPolarity,CLKPhase
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
-TIM2.IPParameters=Prescaler,Period
-TIM2.Period=500-1
-TIM2.Prescaler=9600-1
-TIM3.IPParameters=Period,Prescaler
-TIM3.Period=50-1
+Mcu.IP14=USB
+Mcu.IP13=USART3
+ProjectManager.BackupPrevious=false
+Mcu.IP15=USB_DEVICE
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
+PA14.Mode=Serial_Wire
 TIM3.Prescaler=9600-1
-USART1.IPParameters=VirtualMode
-USART1.VirtualMode=VM_ASYNC
-USB_DEVICE.CLASS_NAME_FS=MSC
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,PRODUCT_STRING_MSC_FS,USBD_DEBUG_LEVEL
-USB_DEVICE.PRODUCT_STRING_MSC_FS=STM32 F103 Mass Storage
-USB_DEVICE.USBD_DEBUG_LEVEL=2
-USB_DEVICE.VirtualMode=Msc
-USB_DEVICE.VirtualModeFS=Msc_FS
-VP_FATFS_VS_Generic.Mode=User_defined
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+File.Version=6
+PA8.Signal=GPIO_Output
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+TIM4.Period=5-1
+Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.RequestsNb=6
+CAN.CalculateTimeQuantum=666.6666666666666
+ProjectManager.HalAssertFull=false
+Dma.USART1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+ProjectManager.ProjectName=stm32f103rct6
+FATFS._USE_LABEL=1
+RCC.PLLMCOFreq_Value=24000000
+PB9.Signal=CAN_TX
+Mcu.Package=LQFP64
+TIM2.Prescaler=9600-1
+PA6.Signal=SPI1_MISO
 VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
-VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
-VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
-VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
-VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
-VP_SYS_VS_Systick.Mode=SysTick
+RCC.I2S2Freq_Value=48000000
+Dma.USART2_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART3_TX.5.Priority=DMA_PRIORITY_LOW
+USART2.VirtualMode=VM_ASYNC
+PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLUP
+ProjectManager.ToolChainLocation=
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+USART3.IPParameters=VirtualMode
+PA10.Signal=USART1_RX
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+Dma.USART2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART3_RX.4.Instance=DMA1_Channel3
+FATFS._FS_LOCK=0
+Dma.Request2=USART2_RX
+Dma.Request1=USART1_TX
+RCC.APB1TimFreq_Value=48000000
+Dma.Request4=USART3_RX
+Dma.Request3=USART2_TX
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Dma.USART1_RX.0.Mode=DMA_NORMAL
+Dma.Request5=USART3_TX
+Dma.USART1_TX.1.Priority=DMA_PRIORITY_MEDIUM
 VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS.Mode=MSC_FS
+NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+Dma.Request0=USART1_RX
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+Dma.USART1_RX.0.Instance=DMA1_Channel5
+ProjectManager.CustomerFirmwarePackage=
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+USB_DEVICE.USBD_DEBUG_LEVEL=2
+PA3.Signal=USART2_RX
+PA5.Mode=Full_Duplex_Master
+Dma.USART1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_MSC_FS
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+Dma.USART2_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+Dma.USART1_TX.1.Instance=DMA1_Channel4
+ProjectManager.ProjectFileName=stm32f103rct6.ioc
+PA7.Mode=Full_Duplex_Master
+Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+PD1-OSC_OUT.Mode=HSE-External-Oscillator
+PA10.Mode=Asynchronous
+Mcu.PinsNb=31
+Dma.USART2_TX.3.Instance=DMA1_Channel7
+PD2.GPIO_PuPd=GPIO_PULLUP
+ProjectManager.NoMain=false
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,CLKPolarity,CLKPhase
+USB_DEVICE.VirtualModeFS=Msc_FS
+Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+PC13-TAMPER-RTC.Signal=GPIO_Input
+Dma.USART3_TX.5.Instance=DMA1_Channel2
+ProjectManager.DefaultFWLocation=true
+Dma.USART2_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+SPI1.CLKPhase=SPI_PHASE_2EDGE
+PD0-OSC_IN.Signal=RCC_OSC_IN
+ProjectManager.DeletePrevious=true
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,PRODUCT_STRING_MSC_FS,USBD_DEBUG_LEVEL
+Dma.USART3_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+CAN.CalculateTimeBit=2000
+Dma.USART2_RX.2.Mode=DMA_NORMAL
+RCC.FamilyName=M
+RCC.I2S3Freq_Value=48000000
+FATFS._VOLUMES=2
+FATFS.IPParameters=_USE_LABEL,_CODE_PAGE,_VOLUMES,_FS_LOCK
+PA3.Mode=Asynchronous
+PA13.Signal=SYS_JTMS-SWDIO
+PA9.Mode=Asynchronous
+Dma.USART3_RX.4.Mode=DMA_NORMAL
+PA8.GPIO_Label=LED0
+Dma.USART2_RX.2.MemInc=DMA_MINC_ENABLE
+PB11.Mode=Asynchronous
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+ProjectManager.TargetToolchain=MDK-ARM V5
+TIM4.IPParameters=Prescaler,Period
+FATFS._CODE_PAGE=1
+Dma.USART3_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+PB9.Mode=Master
+PA9.Signal=USART1_TX
+Dma.USART3_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.5.Mode=DMA_NORMAL
+PC13-TAMPER-RTC.Locked=true
+RCC.USBFreq_Value=48000000
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+TIM4.Prescaler=9600-1
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
+VP_FATFS_VS_Generic.Mode=User_defined
+PD0-OSC_IN.Mode=HSE-External-Oscillator
+PB10.Signal=USART3_TX
+PA5.Signal=SPI1_SCK
+Dma.USART1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 board=custom
+ProjectManager.LastFirmware=false
+PC13-TAMPER-RTC.GPIO_Label=KEY0
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+RCC.VCOOutput2Freq_Value=8000000
+Dma.USART2_RX.2.PeriphInc=DMA_PINC_DISABLE
+RCC.APB2Freq_Value=48000000
+MxCube.Version=5.6.0
+USB_DEVICE.PRODUCT_STRING_MSC_FS=STM32 F103 Mass Storage
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+SPI1.Mode=SPI_MODE_MASTER
+Dma.USART2_TX.3.Mode=DMA_NORMAL
+NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+Mcu.Pin30=VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS
+PC1.GPIO_Label=KEY1
+VP_SYS_VS_Systick.Mode=SysTick
+TIM3.IPParameters=Period,Prescaler
+Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit
+TIM2.Period=500-1
+PA13.Mode=Serial_Wire
+ProjectManager.FreePins=false
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SDIOFreq_Value,SDIOHCLKDiv2FreqValue,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+ProjectManager.AskForMigrate=true
+Mcu.Name=STM32F103R(C-D-E)Tx
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_TIM2_VS_ClockSourceINT
+PA2.Signal=USART2_TX
+Mcu.Pin24=VP_RTC_VS_RTC_Activate
+ProjectManager.UnderRoot=false
+Mcu.Pin25=VP_RTC_VS_RTC_Calendar
+Mcu.IP8=TIM2
+Mcu.IP9=TIM3
+Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
+Mcu.IP6=SPI1
+Mcu.Pin29=VP_TIM4_VS_ClockSourceINT
+Mcu.IP7=SYS
+ProjectManager.CoupleFile=true
+RCC.SYSCLKFreq_VALUE=48000000
+Mcu.Pin22=PB9
+Mcu.Pin23=VP_FATFS_VS_Generic
+RCC.TimSysFreq_Value=48000000
+Mcu.Pin20=PD2
+Mcu.Pin21=PB8
+PA12.Mode=Device
+NVIC.ForceEnableDMAVector=true
+KeepUserPlacement=false
+Dma.USART2_RX.2.Instance=DMA1_Channel6
+USART3.VirtualMode=VM_ASYNC
+Dma.USART1_TX.1.Mode=DMA_NORMAL
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+USART1.VirtualMode=VM_ASYNC
+ProjectManager.CompilerOptimize=6
+PA11.Signal=USB_DM
+PA14.Signal=SYS_JTCK-SWCLK
+ProjectManager.HeapSize=0x1000
+Mcu.Pin15=PA10
+Dma.USART1_TX.1.PeriphInc=DMA_PINC_DISABLE
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.Pin16=PA11
+Mcu.Pin13=PA8
+Dma.USART3_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Mcu.Pin14=PA9
+Mcu.Pin19=PA14
+ProjectManager.ComputerToolchain=false
+Mcu.Pin17=PA12
+Dma.USART3_RX.4.MemInc=DMA_MINC_ENABLE
+PA8.GPIO_PuPd=GPIO_PULLUP
+Mcu.Pin18=PA13
+Dma.USART2_TX.3.Priority=DMA_PRIORITY_MEDIUM
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+Dma.USART3_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+Mcu.Pin11=PB10
+Mcu.Pin12=PB11
+PB8.Mode=Master
+Mcu.Pin10=PA7
+PB8.Signal=CAN_RX
+PA2.Mode=Asynchronous
+NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+PD2.Signal=GPIO_Output
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+RCC.APB1Freq_Value=24000000
+USB_DEVICE.VirtualMode=Msc
+RTC.Date=27
+ProjectManager.DeviceId=STM32F103RCTx
+PC1.Signal=GPIO_Input
+PD2.GPIO_Label=LED1
+ProjectManager.LibraryCopy=1
+PA7.Signal=SPI1_MOSI
